# Toypandas

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  toypandas-11.py  toypandas.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/toypandas/: index.doctree
docs/_build/doctrees/autoapi/toypandas/dataframe/: index.doctree
docs/_build/doctrees/autoapi/toypandas/locating/: index.doctree
docs/_build/doctrees/autoapi/toypandas/series/: index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/toypandas/: index.rst.txt
docs/_build/html/_sources/autoapi/toypandas/dataframe/: index.rst.txt
docs/_build/html/_sources/autoapi/toypandas/locating/: index.rst.txt
docs/_build/html/_sources/autoapi/toypandas/series/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/toypandas/: index.html
docs/_build/html/autoapi/toypandas/dataframe/: index.html
docs/_build/html/autoapi/toypandas/locating/: index.html
docs/_build/html/autoapi/toypandas/series/: index.html
src/toypandas/: __init__.py  dataframe.py  series.py
tests/: data.csv  test_02_dataframe.py  test_dataframe.py  test_series.py
