[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toypandas"
version = "0.1.1"
authors = [
  { name="Daniele Traversaro", email="traversaro.daniele@gmail.com" },
  { name="Davide Ponzini", email="davide.ponzini95@gmail.com" },
]
description = "A library for educational purposes to simplify the syntax and notional machine of Python Pandas."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas",
]

[project.urls]
"Repository" = "https://github.com/researchDataset/Toypandas"
"Documentation" = "https://toypandas.readthedocs.io/en/latest/index.html"
"Bug Tracker" = "https://github.com/researchDataset/Toypandas/issues"